@@ -1,3 +1,4 @@
+(r5161) Fix a vanilla bug: Only consume one regeneration booster at a time, even when multiple are selected (only the effects of one are applied).
 (r5149) Plug a vanilla memory leak.
 (r5143) Fix a vanilla graphics glitch: The battle sector locator on the strategic map was not fully drawn.
 (r5142) Slightly improve German translation.
